navbar collapse fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -166,7 +166,6 @@ h4 {
 }
 
 .navbar-collapse {
-  position: absolute;
   right: 0px;
   white-space: nowrap;
   background-color: #333333;
